--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
 
-    <script src="./js/authorization.js"></script>
+    <script type="module" src="./js/authorization.js"></script>
 </body>
     
 </html>
